use a percentage for left labels instead of a fixed with This is to ensure the margin isn't too big for small spaces

--- a/css/frm_old_grids.css
+++ b/css/frm_old_grids.css
@@ -223,7 +223,7 @@
 	float:left;
 	display:inline;
 	max-width:33%;
-	margin-right:10px;
+	margin-right:5%;
 }
 
 .with_frm_style .frm_conf_field.frm_left_container label.frm_primary_label{
